alignment bug fix - issue #367

--- a/themes/default/styles/filemanager.css
+++ b/themes/default/styles/filemanager.css
@@ -359,6 +359,7 @@ div.clip {
 	display: block;
 	text-align: center;
 	margin-bottom: 10px;
+	white-space: nowrap;
 }
 
 #contents.list {
