--- a/themes/flat-dark/styles/filemanager.css
+++ b/themes/flat-dark/styles/filemanager.css
@@ -370,6 +370,7 @@ div.clip {
 	display: block;
 	text-align: center;
 	margin-bottom: 10px;
+	white-space: nowrap;
 }
 
 #contents.list {
