--- a/themes/flat-oil/styles/filemanager.css
+++ b/themes/flat-oil/styles/filemanager.css
@@ -369,6 +369,7 @@ div.clip {
 	display: block;
 	text-align: center;
 	margin-bottom: 10px;
+	white-space: nowrap;
 }
 
 #contents.list {
