--- a/themes/flat-turquoise/styles/filemanager.css
+++ b/themes/flat-turquoise/styles/filemanager.css
@@ -368,6 +368,7 @@ div.clip {
 	display: block;
 	text-align: center;
 	margin-bottom: 10px;
+	white-space: nowrap;
 }
 
 #contents.list {
